@@ -1,3 +1,7 @@
+2007-12-30  Matthias Clasen  <mclasen@redhat.com> 
+
+	* gfileinfo.c: Documentation updates.
+
 2007-12-26  Matthias Clasen  <mclasen@redhat.com> 
 
 	* gdesktopappinfo.c: Include crt_externs.h.  (#505730,
